--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^2.29.1",
     "gray-matter": "^4.0.3",
     "matter": "^0.2.0",
     "next": "12.2.5",
